--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@portabletext/react": "3.0.11",
+    "@portabletext/types": "^2.0.8",
     "@sanity/client": "6.7.0",
     "@sanity/demo": "1.0.2",
     "@sanity/image-url": "1.0.2",
@@ -32,7 +33,9 @@
     "react-is": "18.2.0",
     "sanity": "3.19.0",
     "sanity-plugin-asset-source-unsplash": "1.1.2",
+    "sanity-plugin-hotspot-array": "^1.0.1",
     "sanity-plugin-iframe-pane": "2.6.0",
+    "sanity-plugin-shopify-assets": "^1.1.0",
     "server-only": "0.0.1",
     "styled-components": "5.3.11",
     "suspend-react": "0.1.3"
